add migration file and other dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ language: python
 python:
   - "3.8"
 os: Linux
+services:
+  - mysql
+before_install:
+  - mysql -e /scripts/01_create_database_tables.sql
 install:
   - pip install -r requirements.txt
 script:
-  - python ./test/cli.py
+  - python ./tests/cli.py
