--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: python
 python:
   - "3.8"
-os: Linux
+os: linux
 services:
   - mysql
 before_install:
-  - mysql -e /scripts/01_create_database_tables.sql
+  - mysql -e ./scripts/01_create_database_tables.sql
 install:
   - pip install -r requirements.txt
 script:
-  - python ./tests/cli.py
+  - python ./tests/integration/migration.py
